# CoolProp

./: .clang-format  .clang-tidy  .cmake-format.yaml  .coderabbit.yaml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CITATION.bib  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CoolPropBibTeXLibrary.bib  Developer instructions.txt  Doxyfile  DoxygenLayout.xml  FAQ.md  LICENSE  LICENSE_CLA.txt  MANIFEST.in  MakeDistro.py  README.md  Readme.rst  Readme.txt  TTD.txt  appveyor.yml  appveyor.yml.example  azure-pipelines.yml  nightly_build.py  pyproject.toml  test  test_phase_envelope.cpp  test_phase_envelope.py  test_phase_envelope_ctRefprop.py  version.txt
src/CMake/: CMakeLists.txt
src/CMake/src/: CoolPropConfig.h  CoolPropConfig.h.in  CoolPropMain.cpp
wrappers/: CMakeLists.txt
wrappers/Android/: Android.mk.template  Application.mk
wrappers/C#/: BuildCsharpDLL.bat  Example.cs  README.txt  build.json  exports.txt  run_example.bat
wrappers/C#/VSCsharp/: CoolProp.NET.csproj  CoolProp.NET.sln  CoolProp.cs  CoolPropPINVOKE.cs  Program.cs  SWIGTYPE_p_Fluid.cs  SWIGTYPE_p_double.cs  SWIGTYPE_p_int.cs  _params.cs  phases.cs  unit_constants.cs  unit_systems.cs
wrappers/DEB/: .gitignore  package.bsh
wrappers/DEB/debian.src/: changelog  control  postinst  rules
wrappers/Delphi/: Project4.dpr  Project4.res  Project4_Notes.txt  Project5.dpr  Readme.rst  cpIntf.pas  log14dec2015.txt  main.dfm  main.pas  project1.dpr  project2.dpr  project3.dpr  project6.dpr  uMolChart.pas
wrappers/Delphi-Lazarus/: CoolPropDelphiExample.lpr
wrappers/EES/: BuildDLF.bat  BuildDLFGCC.bat  BuildDLL.bat  BuildInnoInstaller.iss  BuildInnoInstaller.iss.in  CoolProp.LIB  CoolProp.htm  CoolProp_EES_Sample.EES  CopyDLF.bat  README.rst  build.json  exports.txt  main.cpp
wrappers/EES/test/: BuildTest.bat  testdll.cpp
wrappers/Excel/: BuildDLL.bat  BuildDLLx64.bat  CoolProp.xla  CoolProp.xlam  README.rst  TestExcel.xlsx  XLAM_module.bas  XLA_module.bas  copy_dll.bat  exports.txt  exports_x64.txt
wrappers/Fluent/: CoolProp_Properties_of_Brine.c  CoolProp_Properties_of_Water.c  Example_windows_UDF.cpp  README.rst  UDF.c  compile.sh  compile_only_udf.sh  properties.c
wrappers/Fortran/: README.rst  build.bat  build.bsh  coolpropIF.c  examplef.for
wrappers/Fortran/detailed_example/: CMakeLists.txt  README.md  cool_fortran_bind.f90  cpinterface.f90  cpinterface.mod
wrappers/Fortran/simple_example/: README.md  fortmyfunc.f90  myfunc.cpp
wrappers/GUI/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
wrappers/GUI/docker/: Dockerfile.ubuntu-builder
wrappers/GUI/scripts/: check-screenshot-rendered.py  generate-licenses.mjs  regenerate-icons.py
wrappers/GUI/src/: App.css  App.tsx  constants.ts  main.tsx
wrappers/GUI/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
wrappers/GoogleAppsScript/: Code.js  README.md  flaskapi.py  test_api.py
wrappers/Java/: README.rst  build.json  build_win32.bat  build_x64.bat  exports.txt  exports_x64.txt
wrappers/Javascript/: Dockerfile  README.rst  build.py  build.sh  build_linux.sh  coolprop.js  coolprop.min.js  docker-compose.yml  docker_build.sh  index.html  test_wasm.mjs
wrappers/Julia/: CoolProp.jl  fluids.table  parameters.table
wrappers/Julia/0.3/: CoolProp.jl
wrappers/Julia/0.4/: CoolProp.jl
wrappers/Julia/Julia3/: CoolProp.jl
wrappers/Labview/: BuildDLL.bat  CoolProp & Labview.docx  CoolProp_SI.llb  CoolProp_SI_V11.0.vi  CoolProp_SI_V15.0.llb  CoolProp_SI_V15.0.vi  Coolprop.llb  README.rst  VIs  exports.txt
wrappers/Labview/vxWorks/: Makefile  Makefile.in  README.md  README.rst  build.bat
wrappers/LibreOffice/: Readme.rst  TestLibreOffice.ods
wrappers/LibreOffice/src/: CoolProp.xcu  OptionsDialog.xcu  XCoolProp.idl  XCoolProp.rdb  coolprop.py  description.xml.in
wrappers/Lua/: Makefile  README.rst  coolprop.lua  example.lua  lualib.mk
wrappers/Lua/coolprop/: capi.c  compat.h  ffi.lua
wrappers/MATLAB/: AbstractState.m  CoolPropWrapperTests.m  CoolPropsWrapperTests.m  HAProps.c  HAProps.cpp  MATLABBuilder.m  MATLABBuilder_OSX.m  MATLAB_sample.m  Props.c  PropsSI.c  PropsSI.cpp  PropsSI.m  README.md  README.rst  example.m  matpy.m  mexopts_w32.bat  test.m
wrappers/Maple/: Analysis of a Refrigeration Cycle with CoolProp.mw  BuildDLLx64.bat  exports_x64.txt  sample_file.mw
wrappers/Maple/simple/: BuildDLL.bat  mult.c  simple.mw
wrappers/MathCAD/: BuildDLL.bat  CoolProp.rc.in  CoolPropFluidProperties.xmcd  CoolPropFluidProperties.xmcdz  CoolPropMathcad.cpp  CoolProp_EN.xml  MCADINCL.H  README.md  README.rst  exports.txt
wrappers/MathCAD/LegacyMathcad/: README.rst
wrappers/MathCAD/Prime/: BuildDLL.bat  CoolProp 4.0 Beta Mathcad Prime 3.0 Wrapper.cpp  CoolPropFluidProperties.mcdx  MCADINCL.H  README.md  README.rst
wrappers/Mathematica/: BuildDLL.bat  CoolProp.rc.in  CoolProp.wl  CoolPropMathematica.cpp  README.rst  example.nb
wrappers/Modelica/: BuildLIB-VS2008.bat  BuildLIB-VS2010.bat  BuildLIB-VS2012.bat  README.rst  makefile
wrappers/Modelica/src/: Doxyfile  FluidProp_COM.h  FluidProp_IF.cpp  FluidProp_IF.h  ModelicaUtilities.h  basesolver.cpp  (+17 more)
wrappers/Octave/: CMakeLists.txt  OctaveBuilder.bat  README.rst  _OctaveBuilder_Linux.m  example.m  run_example_3.6.1.m  run_example_3.6.2.m  run_example_3.6.4.m
wrappers/Python/: BuildCP.bat  CMakeLists.txt  ForceBuild.bat  MANIFEST.in  __init__.py.template  build_mingw_staticlib.bat  build_readme.txt  deprecated_setup.py  generate_constants_module.py  generate_meta.yaml.py  generate_meta_info.py  generate_meta_info.py.txt  install-linux.sh  install-mac.sh  pyproject.toml  setup.py  setup2.py
wrappers/Rust/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
wrappers/SMath/: config.ini.template  coolprop_wrapper.sln
wrappers/Scilab/: BuildDLL.bat  README.rst  sample.sce
wrappers/SharedLibrary/: BuildLibraries.bat  build.json  makefile
wrappers/StaticLibrary/: readme.txt
wrappers/VB.NET/: README.rst  WpfApplication1.sln
wrappers/ees/: CMakeLists.txt
(+2178 files in other folders)
