[build-system]
requires = ["setuptools", "setuptools-scm", "cython"]
build-backend = "backend"
backend-path = ["_py_backend"]

[project]
name = "coolprop"
authors = [
    {name = "Ian Bell", email = "ian.h.bell@gmail.com"},
]
description = "Open-source thermodynamic and transport properties database"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
	"Programming Language :: Python",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "cython",
	"numpy",
	"setuptools"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "_py_backend.__version__"}

[tool.setuptools.packages.find]
where = ["wrappers/Python"]