[build-system]
requires = ["scikit-build-core>=0.10", "cython>=0.29"]
build-backend = "scikit_build_core.build"

[project]
name = "CoolProp"
authors = [
    {name = "Ian Bell", email = "ian.h.bell@gmail.com"},
]
description = "Open-source thermodynamic and transport properties database"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
]
dynamic = ["version"]

[project.urls]
Homepage = "http://www.coolprop.org"
Documentation = "http://www.coolprop.org"
Repository = "https://github.com/CoolProp/CoolProp"
"Bug Tracker" = "https://github.com/CoolProp/CoolProp/issues"

[tool.scikit-build]
# Required to load the local (provider-path) dynamic-metadata version
# plugin in dev/coolprop_version_provider.py — scikit-build-core gates
# local plugins behind this flag.
experimental = true

# Minimum version of CMake to use
cmake.version = ">=3.15"

# Build type
cmake.build-type = "Release"

# Set CMake source directory to wrappers/Python
cmake.source-dir = "wrappers/Python"

# Build directory for incremental builds
build-dir = "build/{wheel_tag}"

# Enable verbose output for debugging (set to true if needed)
build.verbose = true

# Ship the dynamic-metadata version provider so sdist -> wheel builds can
# resolve the version (see [tool.scikit-build.metadata.version] below).
sdist.include = ["dev/coolprop_version_provider.py"]

# Exclude unnecessary files from the wheel
wheel.exclude = [
    "**/*.pyc",
    "**/*.pyo",
    "**/__pycache__",
    "**/.git*",
    "**/*.cpp",  # Exclude generated C++ from Cython
]

# Resolve the version at build time via a small Python provider (see
# dev/coolprop_version_provider.py).  It parses the base version from
# CMakeLists.txt — the single source of truth — and honors an optional
# $COOLPROP_VERSION_OVERRIDE so CI can inject a unique TestPyPI/PyPI version
# per build.  A plain regex over CMakeLists.txt cannot do that, which left
# every dev build stuck at 7.2.1.dev0 and silently un-published (#2988).
[tool.scikit-build.metadata.version]
provider = "coolprop_version_provider"
provider-path = "dev"

# v8 nanobind build, driven by a single COOLPROP_NANOBIND=ON environment signal
# (bd CoolProp-r9sq.19).  Both overrides key on the same env var so the build
# selection and the abi3 wheel tag cannot diverge:
#
#   1. select the nanobind package (any Python) by injecting the cmake define --
#      overrides cannot see -D defines, so the env var is the canonical signal;
#   2. on Python >= 3.12, also tag the wheel cp312-abi3.  scikit-build-core then
#      sets SKBUILD_SABI_VERSION, which CMakeLists uses to build the Cython
#      sidecars (State, _constants) limited-API -- so nanobind's STABLE_ABI core
#      and the sidecars are all abi3 and ONE wheel covers 3.12/3.13/3.14.
#
# Gating (2) on Py>=3.12 leaves the legacy wheel and the 3.9-3.11 per-version
# nanobind fallback (below nanobind's stable-ABI floor) untouched.
[[tool.scikit-build.overrides]]
if.env.COOLPROP_NANOBIND = true
cmake.define.COOLPROP_NANOBIND = "ON"

[[tool.scikit-build.overrides]]
if.env.COOLPROP_NANOBIND = true
if.python-version = ">=3.12"
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Build for multiple Python versions (CPython only)
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"

# Skip musllinux for now
skip = "*-musllinux_*"

# Test command
test-command = "python -c \"import CoolProp; print(CoolProp.__version__); CoolProp.CoolProp.PropsSI('T', 'P', 101325, 'Q', 0, 'Water')\""
test-requires = ["numpy"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
# Set deployment target for macOS (Big Sur and later)
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[dependency-groups]
dev = [
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "scipy>=1.10.1",
]
